# bioimage-py

./: .gitignore  CLAUDE.md  DESIGN_DOC.md  README.md  environment.yaml  pyproject.toml
.github/workflows/: build_conda.yml  build_pip.yml  docs.yml  publish.yml
bioimage_py/: __init__.py  copy.py  downsample.py  transformation.py  util.py
bioimage_py/evaluation/: __init__.py  _common.py  centroid_matching.py  contingency_table.py  cremi_score.py  dice.py  matching.py  rand_index.py  variation_of_information.py
bioimage_py/filters/: filters.py
bioimage_py/io/: __init__.py  _util.py  files.py  image_stack_wrapper.py  knossos_wrapper.py  mrc_wrapper.py  msr_wrapper.py  nifti_wrapper.py  registry.py
bioimage_py/morphology/: __init__.py  distance_transform.py  local_maxima.py  morphology.py  regionprops.py
bioimage_py/operations/: __init__.py  operations.py
bioimage_py/runner/: __init__.py  _harness.py  base.py  config.py  (+1 more)
docs/: installation.md  usage.md
scripts/: stitch_micro_sam_segmentation.py
tests/: conftest.py  test_contingency_table.py  test_distance_transform.py  test_downsample.py  test_evaluation_metrics.py  test_filters.py  test_io_registry.py  test_io_sources.py  test_io_util.py  test_local_maxima.py  test_n5_io.py  test_op_rerun.py  test_operations.py  test_runner_failures.py  test_runner_parity.py  test_runner_run.py  test_slurm_config.py  test_slurm_runner.py  test_slurm_submit_failure.py  test_sources.py  test_stats.py  test_transformation.py  test_unique.py  test_webknossos_local.py  test_wrapper_generic.py  test_write_safety.py
(+22 files in other folders)
